--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 test {
+    useJUnit()
     useJUnitPlatform()
 }
